# dsl-experiment

./: Compositional.hs  Curry.hs  HindleyMilner.hs  LICENSE  MilnerMycroft.hs  ParseTrifecta.hs  README.md  dsl-experiment.cabal  stack.yaml
