name:                dsl-experiment
version:             0.1.0.0
synopsis:            Basic implementation of Hindley-Milner Type System and variants.
--description:
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Compositional
    ParseTrifecta
    Curry
    MilnerMycroft
    HindleyMilner

  build-depends:
    base,
    mtl,
    bytestring,
    containers,
    unordered-containers,
    ansi-wl-pprint,
    trifecta,
    parsers,
    indentation

  hs-source-dirs:      .
  default-language:    Haskell2010
